# book-recommendation

./: README.md  data-collection.ipynb  gradio-dashboard.py  main.py  pyproject.toml  sentement-analysis.ipynb  text-classification.ipynb  vector-search.ipynb
