[project]
name = "book-recommeder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "gradio>=6.9.0",
    "hf-xet>=1.4.2",
    "huggingface-hub[hf-xet]>=1.7.1",
    "kagglehub>=1.0.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-gemini>=0.1.1",
    "langchain-huggingface>=1.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.1",
    "matplot>=0.1.9",
    "pandas>=3.0.1",
    "protobuf<4.21.0",
    "python-dotenv>=1.2.2",
    "requests-toolbelt>=1.0.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.3.0",
    "torch>=2.10.0",
    "transformers>=5.3.0",
]
